# ggen

./: .gitignore  Makefile.am
interfaces/python/: setup.py
interfaces/python/ggen/: __init__.py  wrapper.py
interfaces/python/src/: python-lib-module.c
src/: ggen.h  utils.c
